# GLIDE

./: CMakeLists.txt  README.md  test.sh
evaluation_data/ablation/: glide_LP_BI_build.csv  glide_LP_BI_search.csv  glide_LP_RI_build.csv  glide_LP_RI_search.csv  glide_SP_BI_build.csv  glide_SP_BI_search.csv  glide_SP_RI_build.csv  glide_SP_RI_search.csv
evaluation_data/clustering/: agglomerative.csv  blancekmeans.csv  dbscan.csv  kmeans.csv  metric.txt
evaluation_data/intuition/: glide_LP_score.csv  glide_SP_score.csv  same_size_boundary_16.csv  same_size_random_16.csv
evaluation_data/parameter/boundary_factor/: glide_boundary_factor_nytimes.csv  glide_boundary_factor_sift1m.csv
evaluation_data/parameter/m/: glide_m_test.csv
evaluation_data/parameter/sample_factor/: glide_cluster_time.csv  glide_gist_sample_factor_0.01.csv  glide_gist_sample_factor_0.1.csv  glide_gist_sample_factor_1.0.csv  glide_glove200_sample_factor_0.01.csv  glide_glove200_sample_factor_0.1.csv  glide_glove200_sample_factor_1.0.csv  glide_nytimes_sample_factor_0.01.csv  glide_nytimes_sample_factor_0.1.csv  glide_nytimes_sample_factor_1.0.csv  glide_sift1m_sample_factor_0.01.csv  glide_sift1m_sample_factor_0.1.csv  glide_sift1m_sample_factor_1.0.csv
evaluation_data/search/: cagra_deep1m_search.csv  cagra_gist_search.csv  cagra_glove200_search.csv  cagra_nytimes_search.csv  cagra_sift10m_search.csv  cagra_sift1m_search.csv  ggnn_deep1m_search.csv  ggnn_gist1m_search.csv  ggnn_glove200_search.csv  ggnn_nytimes_search.csv  ggnn_sift100m_search.csv  ggnn_sift10m_search.csv  ggnn_sift1m_search.csv  glide_deep1m_search.csv  glide_gist_search.csv  glide_glove200_search.csv  glide_nytimes_search.csv  glide_sift100m_search.csv  glide_sift10m_search.csv  glide_sift1m_search.csv  ivf_deep1m_search.csv  ivf_gist_search.csv  ivf_glove200_search.csv  ivf_nytimes_search.csv  ivf_sift10m_search.csv  ivf_sift1m_search.csv  nsg_deep1m_search.csv  nsg_gist_search.csv  nsg_glove200_search.csv  nsg_nytimes_search.csv  nsg_sift10m_search.csv  nsg_sift1m_search.csv
src/: bitonic.cuh  distance.cuh  glide.cuh  glide_impl.cuh  glide_large.cuh  glide_large_impl.cuh  graph_kernel.cuh  hashmap.cuh  kernel_config.cuh  large_build.cu  large_knn.cu  large_preprocess.cu  large_search.cu  load.cuh  nn_descent.cuh  params.cuh  partition.cuh  partition_kernel.cuh  search_kernel.cuh  small_build.cu  small_knn.cu  small_preprocess.cu  small_search.cu  test.cu  utils.cuh
